--- a/Stylepixi.css
+++ b/Stylepixi.css
@@ -24,6 +24,19 @@ p {
     font: normal 100% 'Arial';
     color: black;
 }
+#gray {
+    background: rgba(1, 1, 1, 0.75);
+    display: none;
+    z-index: 100;
+    position: fixed;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+    -o-transition: opacity .5s;
+    transition: opacity .5s;
+}
 .about\.im {
     text-align: left;
     text-decoration: none;
@@ -31,31 +44,44 @@ p {
 
 .about\.im img{
     float: left;
+    width: 400px;
+    height: 255px;
+    left: 104px;
+    top: 211px;
 }
-.img_blok {
-    display: inline-block;
-    align-items: center;
+.img_blok img{
+    width: 229px;
+    height: 142px;
+    border: 1px solid #CCCCCC;
 }
 .window {
     width: 619px;
-    height: 435px;
-    margin: 40px auto;
+    height: 425px;
     background: #ffffff;
-    border: 1px solid #ffffff;
+    left: 74px;
+    top: 81px;
+    position: absolute;
 }
-
 .forms {
-    width: 275px;
-    margin: 0px auto 20px 20px;
+    width: 15px;
     text-align: center;
+    margin: -1px;
 }
 .input {
-    width: 300px;
-    padding: 2px;
-    margin-bottom: 1px;
-    color: white;
+    width: 403px;
+    height: 30px;
+    border: 1px solid #CCCCCC;
+    box-sizing: border-box;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    text-orientation: initial;
 }
+.close {
+    margin: 10px 0 0 590px;
+    cursor: pointer;
+    position: absolute;
 
+}
 .footer h2{
     text-decoration: none;
     font: normal 70% 'century gotic', Arial;
